--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ env:
     - GEM=. DB=postgres
 
 before_script:
-  - bundle exec rails runner "Webdrivers::Chromedriver.update"
-  - ln -s /usr/lib/chromium-browser/chromedriver ~/bin/chromedriver
+  - LATEST_CHROMEDRIVER_VERSION=`curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE"`
+  - curl "https://chromedriver.storage.googleapis.com/${LATEST_CHROMEDRIVER_VERSION}/chromedriver_linux64.zip" -O
+  - unzip chromedriver_linux64.zip -d ~/bin
 
 script:
   - cd $GEM;
